# ShipLog

./: README.md
backdoor.exe/: CMakeLists.txt  backdoor.exe.c  backdoor.exe.h  backdoor.exe.yml  backdoor_exe.c  backdoor_exe.h  exports.yml
common/: parser.c  settings.c  settings.h
config_app/: CMakeLists.txt  main.c  menu.c
net_plugin/: CMakeLists.txt  shipLog_net.c  shipLog_net.yml  vita_netdbg.c  vita_netdbg.h
user_plugin/: CMakeLists.txt  shipLog.c  shipLog.yml
